Bug 164785 - Calc shows conditional formatting after undoing adding conditional formatting
Summary: Calc shows conditional formatting after undoing adding conditional formatting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.4.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords:
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2025-01-21 13:52 UTC by Johannes
Modified: 2025-01-23 20:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file (15.98 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-01-21 13:52 UTC, Johannes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes 2025-01-21 13:52:16 UTC
Description:
After adding conditional formatting to cells and then undoing that action, the conditional formatting is still being shown after adding conditional formatting to other cells.

Steps to Reproduce:
1. Open attached file
2. Select column A
3. Add a color scale: Format > Conditional > Color Scale
4. Click on 'OK' > the color scale is applied
5. Undo this action: Edit > Undo
6. Select column B
7. Add a color scale: Format > Conditional > Color Scale
8. Click on 'OK' > the color scale is applied
9. Scroll or zoom the window

Actual Results:
The conditional formatting of column A is visible again. However, in the window for managing conditional formatting column A isn't visible.

Expected Results:
After undoing adding conditional formatting this conditional formatting is never be visible anymore.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Tested and present in both versions:

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: 480(Build:2)
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: nl-NL (nl_NL.UTF-8); UI: nl-NL
24.8.4-2
Calc: threaded

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1bdc5b77406fadb97c9a54f0a06d5cafbdf0371
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+wayland)
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 1 Johannes 2025-01-21 13:52:39 UTC
Created attachment 198648 [details]
Example file
Comment 2 Mike Kaganski 2025-01-21 19:04:52 UTC
https://gerrit.libreoffice.org/c/core/+/180555
Comment 3 Commit Notification 2025-01-22 04:33:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/21830c58f27977ca4a1dbacd2f41583c9f3ae775

tdf#164785: restore saving/reapplying of CF keys in cells

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-01-22 12:12:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a51400b327b94929ff51035196253341ccf9036

tdf#164785: make sure to not modify CF list in undo/redo

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-01-22 12:23:30 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/63a7c3517921377d587cd6e32c0f17229e1bd744

tdf#164785: restore saving/reapplying of CF keys in cells

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Johannes 2025-01-23 10:53:46 UTC
Tested, it works now correctly. Thanks!

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 89c27a63a70f46ad290fc8cd34a08fae8fe94c8a
CPU threads: 4; OS: Linux 6.12; UI render: default; VCL: kf5 (cairo+wayland)
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2025-01-23 20:50:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6ce53c051454a5f3c675b8c6f7e78e590921c718

tdf#164785: make sure to not modify CF list in undo/redo

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.